<resources>
    <string name="app_name">SupportDesign222Sample</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="title_text_input_layout">TextInputLayout</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password(Confirm)</string>
    <string name="password_not_match">Passwords not match</string>


    <string name="title_fab_and_snackbar">FAB / Snackbar</string>
    <string name="title_tablayout">TabLayout</string>
    <string name="title_tablayout_with_viewpager">TabLayout w/ ViewPager</string>
    <string name="title_coordinator_layout">CoordinatorLayout</string>
    <string name="title_app_bar_layout">AppBarLayout</string>
    <string name="title_collapsing_toolbar">CollapsingToolbar</string>
</resources>
